--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -216,39 +216,39 @@
       <main class="content content-layout" id="js-content" role="main">
         <a id="top"></a>
         <% if current_page.data.title && !current_page.data.dita %>
-          <% if product_info.use_local_header %>
-            <div class="local-header title-container">
-              <div class="local-header version-info">
-                LATEST STABLE VERSION: <%= product_info.latest_stable_version %> - <a href="<%= product_info.changelog_href %>">CHANGELOG</a>
-              </div>
-              <div class="local-header local-title clearfix">
-                <img src="<%= product_info.local_header_img %>">
-                <span class="local-header-title"><%= product_info.local_header_title %>
-                </span>
-                <span class="local-header local-version header-dropdown">
-                  <a class="local-header header-dropdown-link">v<%= product_info.latest_stable_version %></a>
-                  <span class="local-header header-dropdown-content">
-                    <ul>
-                      <% if product_info.local_header_version_list %>
-                        <% product_info.local_header_version_list.each do |version| %>
-                          <li><%= version %></li>
-                        <% end %>
-                      <% end %>
-                    </ul>
+            <% if defined?(:product_info) && product_info.use_local_header %>
+              <div class="local-header title-container">
+                <div class="local-header version-info">
+                  LATEST STABLE VERSION: <%= product_info.latest_stable_version %> - <a href="<%= product_info.changelog_href %>">CHANGELOG</a>
+                </div>
+                <div class="local-header local-title clearfix">
+                  <img src="<%= product_info.local_header_img %>">
+                  <span class="local-header-title"><%= product_info.local_header_title %>
                   </span>
-                </span>
+                  <span class="local-header local-version header-dropdown">
+                    <a class="local-header header-dropdown-link">v<%= product_info.latest_stable_version %></a>
+                    <span class="local-header header-dropdown-content">
+                      <ul>
+                        <% if product_info.local_header_version_list %>
+                          <% product_info.local_header_version_list.each do |version| %>
+                            <li><%= version %></li>
+                          <% end %>
+                        <% end %>
+                      </ul>
+                    </span>
+                  </span>
 
-                <span class="local-header local-search"><a class="search-icon" id="local-header-search" data-behavior="Search">
-                  &nbsp;Search PCF <%= product_info.latest_stable_version %>
-                </a>
-                </span>
+                  <span class="local-header local-search"><a class="search-icon" id="local-header-search" data-behavior="Search">
+                    &nbsp;Search PCF <%= product_info.latest_stable_version %>
+                  </a>
+                  </span>
+                </div>
+                <div class="local-header local-header-links">
+                  <% product_info.local_header_links.each do |link| %>
+                    <%= link %>
+                  <% end %>
+                </div>
               </div>
-              <div class="local-header local-header-links">
-                <% product_info.local_header_links.each do |link| %>
-                  <%= link %>
-                <% end %>
-              </div>
-            </div>
           <% else %>
             <h1 class="title-container">
               <%= current_page.data.title %>
