--- a/source/subnavs/pivotal_redis_service_subnav.erb
+++ b/source/subnavs/pivotal_redis_service_subnav.erb
@@ -1,32 +1,70 @@
-<div id="sub-nav" class="js-sidenav nav-container" role="navigation">
+<div id="sub-nav" class="deepnav-content js-deep-nav js-sidenav nav-container" role="navigation">
   <a class="sidenav-title" data-behavior="SubMenuMobile">
     Doc Index
   </a>
   <div class="nav-content">
     <ul class="menu">
-      <li class="first expanded js-maintopic">
-        <a id='home-nav-link' href="/redis/index.html">Redis for Pivotal Cloud Foundry&reg;</a>
+      <li>
+        <span class="topic">
+          <a id='home-nav-link' href="/redis/index.html">Redis for Pivotal Cloud Foundry&reg;</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/redis/backups.html">Backup & Restore</a>
+
+      <li>
+        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
+          <a href="/redis/overview.html">Overview</a>
+        </span>
+        <ul>
+          <li><span class="topic"><a href="/redis/overview.html#service">Service Plan Descriptions</a></span></li>
+          <li><span class="topic"><a href="/redis/overview.html#resources">Default Resources</a></span></li>
+          <li><span class="topic"><a href="/redis/overview.html#security">Security</a></span></li>
+
+        </ul>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/redis/upgrade.html">Upgrades</a>
+
+      <li>
+        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
+          <a href="/redis/installing.html">Installing Redis for Pivotal Cloud Foundry&reg;</a>
+        </span>
+        <ul>
+          <li><span class="topic"><a href="/redis/installing.html#install">Installation Steps</a></span></li>
+          <li><span class="topic"><a href="/redis/installing.html#configure">Configuring Redis for PCF</a></span></li>
+          <li><span class="topic"><a href="/redis/installing.html#syslog">Configuring Syslog Output</a></span></li>
+        </ul>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/redis/release.html">Release Notes</a>
+
+      <li>
+        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
+          <a href="/redis/using.html">Using Redis for Pivotal Cloud Foundry&reg;</a>
+        </span>
+        <ul>
+          <li><span class="topic"><a href="/redis/using.html#create">Creating a Redis Service Plan</a></span></li>
+          <li><span class="topic"><a href="/redis/using.html#bind">Binding an Application to the Redis Service</a></span></li>
+          <li><span class="topic"><a href="/redis/using.html#delete">Deleting a Redis Instance</a></span></li>
+        </ul>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/redis/resources.html">Resource Requirements</a>
+
+
+      <li>
+        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
+          <a href="/redis/backups.html">Backup & Restore</a>
+        </span>
+        <ul>
+          <li><span class="topic"><a href="/redis/backups.html#backup">Backups</a></span></li>
+          <li><span class="topic"><a href="/redis/backups.html#restore">Restore</a></span></li>
+        </ul>
       </li>
-    </ul>
-    <b>Service Plans:</b>
-    <ul>
-      <li class="first expanded js-maintopic">
-        <a href="/redis/shared-vm.html">Shared-VM Plan</a>
+
+      <li>
+        <span>
+          <a href="/redis/upgrade.html">Upgrading Redis for Pivotal Cloud Foundry&reg;</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/redis/dedicated-vm.html">Dedicated-VM Plan</a>
+
+      <li>
+        <span>
+          <a href="/redis/release.html">Release Notes</a>
+        </span>
       </li>
     </ul>
   </div>
