--- a/source/subnavs/pivotal_redis_service_subnav.erb
+++ b/source/subnavs/pivotal_redis_service_subnav.erb
@@ -23,6 +23,12 @@
       </li>
 
       <li>
+        <span>
+          <a href="/redis/release.html">Release Notes</a>
+        </span>
+      </li>
+
+      <li>
         <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
           <a href="/redis/installing.html">Installing Redis for Pivotal Cloud Foundry&reg;</a>
         </span>
@@ -47,11 +53,11 @@
 
       <li>
         <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
-          <a href="/redis/backups.html">Backup & Restore</a>
+          <a href="/redis/maintain.html">Maintaining Redis for Pivotal Cloud Foundry&reg;</a>
         </span>
         <ul>
-          <li><span class="topic"><a href="/redis/backups.html#backup">Backups</a></span></li>
-          <li><span class="topic"><a href="/redis/backups.html#restore">Restore</a></span></li>
+          <li><span class="topic"><a href="/redis/maintain.html#backup">Creating Backups of Redis Instances</a></span></li>
+          <li><span class="topic"><a href="/redis/maintain.html#restore">Restore Redis Instance from a Backup</a></span></li>
         </ul>
       </li>
 
@@ -61,11 +67,6 @@
         </span>
       </li>
 
-      <li>
-        <span>
-          <a href="/redis/release.html">Release Notes</a>
-        </span>
-      </li>
     </ul>
   </div>
 </div><!--end of sub-nav-->
