corrected plan to instance on redis subnav

--- a/source/subnavs/pivotal_redis_service_subnav.erb
+++ b/source/subnavs/pivotal_redis_service_subnav.erb
@@ -44,7 +44,7 @@
           <a href="/redis/using.html">Using Redis for Pivotal Cloud Foundry&reg;</a>
         </span>
         <ul>
-          <li><span class="topic"><a href="/redis/using.html#create">Creating a Redis Service Plan</a></span></li>
+          <li><span class="topic"><a href="/redis/using.html#create">Creating a Redis Service Instance</a></span></li>
           <li><span class="topic"><a href="/redis/using.html#bind">Binding an Application to the Redis Service</a></span></li>
           <li><span class="topic"><a href="/redis/using.html#delete">Deleting a Redis Instance</a></span></li>
         </ul>
