--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -17,13 +17,14 @@
 @import "partials/_extends.scss";
 
 // content
-@import "partials/_syntax-highlight.scss";
-@import "partials/_3rdparty.scss";
-@import "partials/_header.scss";
-@import "partials/_global-header.scss";
-@import "partials/local-header.scss";
-@import "partials/_footer.scss";
-@import "partials/_sidenav.scss";
+@import "partials/syntax-highlight";
+@import "partials/3rdparty";
+@import "partials/header";
+@import "partials/global-header";
+@import "partials/local-header";
+@import "partials/footer";
+@import "partials/sidenav";
+@import "partials/fix-search-tables";
 
 // ~LAYOUT
 // ===================================================
