Use the gcse search box in the local header
[finishes #117367127]

Signed-off-by: Sarah McAlear <smcalear@pivotal.io>

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -238,9 +238,8 @@
                     </span>
                   </span>
 
-                  <span class="local-header local-search"><a class="search-icon" id="local-header-search" data-behavior="Search">
-                    &nbsp;Search PCF <%= product_info.latest_stable_version %>
-                  </a>
+                  <span class="local-header local-search">
+                    <gcse:searchbox placeholder="something"></gcse:searchbox>
                   </span>
                 </div>
                 <div class="local-header local-header-links">
