--- a/source/stylesheets/partials/_local-header.scss
+++ b/source/stylesheets/partials/_local-header.scss
@@ -65,10 +65,6 @@
   }
 }
 
-.local-header.local-search {
-  float: right;
-}
-
 .local-header.header-dropdown {
   float: none;
 }
@@ -97,6 +93,41 @@
 }
 
 .local-header.local-search {
-  border: 1px solid lightgrey;
-  border-radius: 22px;
+  float: right;
+  display: inline-block;
+  width: 215px;
+
+  table {
+    margin: 0;
+  }
+
+  td, tr {
+    border: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  td.gsc-input {
+    position: relative;
+
+    &:before {
+      font-family: FontAwesome;
+      content: "";
+      display: block;
+      position: absolute;
+      right: 20px;
+      top: 6px;
+    }
+  }
+
+  input.gsc-input {
+    border: 1px solid grey;
+    color: grey;
+    border-radius: 15px;
+    padding: 3px 15px;
+  }
+
+  .gsc-search-button, .gsc-clear-button {
+    display: none;
+  }
 }
