--- a/source/stylesheets/partials/_default.scss
+++ b/source/stylesheets/partials/_default.scss
@@ -51,7 +51,7 @@ img {
 
 // Type Scale: Major Third 1.250
 h1, h2, h3, h4, h5, h6 {
-  margin: 1.414em 0 0.5em;
+  margin: 60px 0 0.5em;
   font-weight: inherit;
   line-height: 1.2;
 }
@@ -285,4 +285,3 @@ hr {
 .hidden {
   display: none !important;
 }
-
