Readded the Network Setup Guide to the Push Subnav
Signed-off-by: Ryan M Collins <rcollins@pivotal.io>

--- a/source/subnavs/push_subnav.erb
+++ b/source/subnavs/push_subnav.erb
@@ -9,10 +9,8 @@
             <li class="menu-link"><a href="/push/installation.html">Installation</a></li>
             <li class="menu-link"><a href="/push/devops.html">DevOps Guide</a></li>
             <li class="menu-link"><a href="/push/release-notes.html">Release Notes</a></li>
-            <li class="menu-link">
-              <a href="/push/v1_4_0/dashboard-user-guide.html">Dashboard User Guide</a>
-            </li>
-            
+            <li class="menu-link"><a href="/push/v1_4_0/dashboard-user-guide.html">Dashboard User Guide</a></li>
+            <li class="menu-link"><a href="/push/network.html">Network Setup Guide</a></li>
             <li>
               <div class="menu-subtitle js-menu-subtitle">Development Guide</div>
               <ul>
