on pages in 'pivotalcf', restrict local search box to docs.pivotal.io/pivotalcf site

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -239,7 +239,11 @@
                   </span>
 
                   <span class="local-header local-search">
-                    <gcse:searchbox placeholder="something"></gcse:searchbox>
+                    <% if page_classes.match(/^pivotalcf /) %>
+										  <gcse:searchbox as_sitesearch="docs.pivotal.io/pivotalcf"></gcse:searchbox>
+										<% else %>
+                      <gcse:searchbox placeholder="something"></gcse:searchbox>
+                    <% end %>
                   </span>
                 </div>
                 <div class="local-header local-header-links">
