Move all Service Backup S3 information into a section
Signed-off-by: Paul Harker <pharker@pivotal.io>

--- a/source/subnavs/pivotal_service_backups_subnav.erb
+++ b/source/subnavs/pivotal_service_backups_subnav.erb
@@ -4,27 +4,34 @@
   </a>
   <div class="nav-content deepnav-content">
     <ul class="menu">
-      <li><span class="topic"><a id='home-nav-link' href="/docs-service-backup/index.html">Service Backups for Pivotal Cloud Foundry&reg;</a></span></li>
-      <li><span class="topic"><a href="/docs-service-backup/index.html#service-backup-bosh-release">Service Backup BOSH release</a></span>
+      <li><span class="topic"><a id='home-nav-link' href="/docs-service-backup/index.html">Service Backups for Pivotal Cloud Foundry&reg;</a></span>
         <ul>
-          <li><span class="topic"><a href="/docs-service-backup/index.html#uploading">Uploading a service backup release</a></span></li>
-          <li><span class="topic"><a href="/docs-service-backup/index.html#configuring">Configuring the manifest</a></span>
+          <li><span class="topic"><a href="/docs-service-backup/index.html#configuration">Configuration</a></span>
             <ul>
-              <li><span class="topic"><a href="/docs-service-backup/index.html#adding-service">Adding service backups to your service deployment</a></span></li>
-              <li><span class="topic"><a href="/docs-service-backup/index.html#correlating">Correlating BOSH instances to Cloud Foundry service instances</a></span></li>
-              <li><span class="topic"><a href="/docs-service-backup/index.html#disabling">Disable Service Backups</a></span></li>
+              <li><span class="topic"><a href="/docs-service-backup/index.html#uploading">Uploading a service backup release</a></span></li>
+              <li><span class="topic"><a href="/docs-service-backup/index.html#configuring">Configuring the manifest</a></span>
+                <ul>
+                  <li><span class="topic"><a href="/docs-service-backup/index.html#adding-service">Adding service backups to your service deployment</a></span></li>
+                  <li><span class="topic"><a href="/docs-service-backup/index.html#correlating">Correlating BOSH instances to Cloud Foundry service instances</a></span></li>
+                  <li><span class="topic"><a href="/docs-service-backup/index.html#disabling">Disable Service Backups</a></span></li>
+                </ul>
+              </li>
+              <li><span class="topic"><a href="/docs-service-backup/index.html#backup-destinations">Backup Destinations</a></span>
+                <ul>
+                  <li><span class="topic"><a href="/docs-service-backup/index.html#s3">S3</a></span></li>
+                  <li><span class="topic"><a href="/docs-service-backup/index.html#azure">Azure</a></span></li>
+                  <li><span class="topic"><a href="/docs-service-backup/index.html#scp">SCP</a></span></li>
+                </ul>
+              </li>
             </ul>
           </li>
-          <li><span class="topic"><a href="/docs-service-backup/index.html#backup-destinations">Backup Destinations</a></span>
+          <li><span class="topic"><a href="/docs-service-backup/index.html#operating">Operating</a></span>
             <ul>
-              <li><span class="topic"><a href="/docs-service-backup/index.html#azure">Azure</a></span></li>
-              <li><span class="topic"><a href="/docs-service-backup/index.html#scp">SCP</a></span></li>
+              <li><span class="topic"><a href="/docs-service-backup/index.html#locating">Locating the backups</a></span></li>
             </ul>
           </li>
-          <li><span class="topic"><a href="/docs-service-backup/index.html#locating">Locating the backups</a></span></li>
         </ul>
       </li>
-      <li><span class="topic"><a href="/docs-service-backup/index.html#aws-backup">AWS Backup User Permissions</a></span></li>
     </ul>
   </div>
 </div><!--end of sub-nav-->
