Document all the destination-independent configuration properties for Service Backup
Signed-off-by: Tom Anderson <toanderson@pivotal.io>

--- a/source/subnavs/pivotal_service_backups_subnav.erb
+++ b/source/subnavs/pivotal_service_backups_subnav.erb
@@ -12,6 +12,10 @@
               <li><span class="topic"><a href="/docs-service-backup/index.html#configuring">Configuring the manifest</a></span>
                 <ul>
                   <li><span class="topic"><a href="/docs-service-backup/index.html#adding-service">Adding service backups to your service deployment</a></span></li>
+                  <li><span class="topic"><a href="/docs-service-backup/index.html#configuring-backup-schedule">Configuring the backup schedule</a></span></li>
+                  <li><span class="topic"><a href="/docs-service-backup/index.html#defining-files">Defining the files to be be backed up</a></span></li>
+                  <li><span class="topic"><a href="/docs-service-backup/index.html#preparing-files">Preparing the files to be backed up</a></span></li>
+                  <li><span class="topic"><a href="/docs-service-backup/index.html#cleaning-files">Cleaning up the files that were backed up</a></span></li>
                   <li><span class="topic"><a href="/docs-service-backup/index.html#correlating">Correlating BOSH instances to Cloud Foundry service instances</a></span></li>
                   <li><span class="topic"><a href="/docs-service-backup/index.html#disabling">Disable Service Backups</a></span></li>
                 </ul>
