--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -219,7 +219,7 @@
             <% if product_info.use_local_header %>
               <div class="local-header title-container">
                 <div class="local-header version-info">
-                  LATEST STABLE VERSION: <%= product_info.latest_stable_version %> - <a href="<%= product_info.changelog_href %>">CHANGELOG</a>
+                  LATEST VERSION: <%= product_info.latest_stable_version %> - <a href="<%= product_info.changelog_href %>">CHANGELOG</a>
                 </div>
                 <div class="local-header local-title clearfix">
                   <img src="<%= product_info.local_header_img %>">
@@ -252,6 +252,9 @@
                   <% end %>
                 </div>
               </div>
+            <h1 class="title-container">
+              <%= current_page.data.title %>
+            </h1>
           <% else %>
             <h1 class="title-container">
               <%= current_page.data.title %>
