Tell google not to include the subnav in its index
[finishes #115183285][finishes #111718460]

Signed-off-by: Gregg Van Hove <gvanhove@pivotal.io>

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -211,7 +211,9 @@
 
     <div class="container">
 
+      <!--googleoff: index-->
       <%= yield_for_subnav %>
+      <!--googleon: index-->
 
       <main class="content content-layout" id="js-content" role="main">
         <a id="top"></a>
