Add entry for plan properties in author docs
Signed-off-by: Jatin Naik <jnaik@pivotal.io>

--- a/source/subnavs/pivotal_on_demand_broker_subnav.erb
+++ b/source/subnavs/pivotal_on_demand_broker_subnav.erb
@@ -37,6 +37,7 @@
           <li><span class="topic"><a href="/on-demand-service-broker/creating.html#what-is-required-of-the-service-authors">What is required of the Service Authors?</a></span></li>
           <li><span class="topic"><a href="/on-demand-service-broker/creating.html#creating-a-service-release">Creating a Service Release</a></span></li>
           <li><span class="topic"><a href="/on-demand-service-broker/creating.html#creating-a-service-adapter">Creating a Service Adapter</a></span></li>
+          <li><span class="topic"><a href="/on-demand-service-broker/creating.html#service-plan-properties">Supporting Service Plan Properties</a></span></li>
           <li><span class="topic"><a href="/on-demand-service-broker/creating.html#service-adapter-interface">Service adapter interface</a></span></li>
           <li><span class="menu-subtitle-bold menu-js-subtitle"><a href="/on-demand-service-broker/creating.html#sub-commands">Subcommands</a></span>
             <ul>
