Add menu items for BOSH SSL certs and teams
Signed-off-by: Tom Anderson <toanderson@pivotal.io>

--- a/source/subnavs/pivotal_on_demand_broker_subnav.erb
+++ b/source/subnavs/pivotal_on_demand_broker_subnav.erb
@@ -56,7 +56,12 @@
         </span>
         <ul>
           <li><span class="topic"><a href="/on-demand-service-broker/operating.html#what-are-the-responsibilities-of-the-operator">What are the responsibilities of the Operator?</a></span></li>
-          <li><span class="topic"><a href="/on-demand-service-broker/operating.html#configure-bosh">Setting up your BOSH director</a></span></li>
+          <li><span class="menu-subtitle-bold"><a href="/on-demand-service-broker/operating.html#configure-bosh">Setting up your BOSH director</a></span>
+            <ul>
+              <li><span class="topic"><a href="/on-demand-service-broker/operating.html#ssl-certificates">SSL certificates</a></span></li>
+              <li><span class="topic"><a href="/on-demand-service-broker/operating.html#bosh-teams">BOSH teams</a></span></li>
+            </ul>
+          </li>
           <li><span class="topic"><a href="/on-demand-service-broker/operating.html#upload-required-releases">Upload Required Releases</a></span></li>
           <li><span class="menu-subtitle-bold menu-js-subtitle"><a href="/on-demand-service-broker/operating.html#write-a-broker-manifest">Write a Broker Manifest</a></span>
             <ul>
