Remove unused html class from menu items
Signed-off-by: Maria Ntalla <mntalla@pivotal.io>

--- a/source/subnavs/pivotal_on_demand_broker_subnav.erb
+++ b/source/subnavs/pivotal_on_demand_broker_subnav.erb
@@ -20,7 +20,7 @@
           <li><span class="topic"><a href="/on-demand-service-broker/overview.html#what-is-a-service-adapter">What is a service adapter</a></span></li>
           <li><span class="topic"><a href="/on-demand-service-broker/overview.html#why-provision-iaas-resources-on-demand">Why provision IAAS resources on-demand?</a></span></li>
           <li><span class="topic"><a href="/on-demand-service-broker/overview.html#why-use-odb-to-develop-on-demand-service-offerings">Why use ODB to develop on-demand service offerings?</a></span></li>
-          <li><span class="menu-subtitle-bold menu-js-subtitle"><a href="/on-demand-service-broker/overview.html#prerequisites-for-deploying-brokers-that-use-odb">Prerequisites for deploying brokers that use ODB</a></span>
+          <li><span class="menu-subtitle-bold"><a href="/on-demand-service-broker/overview.html#prerequisites-for-deploying-brokers-that-use-odb">Prerequisites for deploying brokers that use ODB</a></span>
             <ul>
               <li><span class="topic"><a href="/on-demand-service-broker/overview.html#bosh-v2-features-we-use">BOSH v2 Features we use</a></span></li>
             </ul>
@@ -39,7 +39,7 @@
           <li><span class="topic"><a href="/on-demand-service-broker/creating.html#creating-a-service-adapter">Creating a Service Adapter</a></span></li>
           <li><span class="topic"><a href="/on-demand-service-broker/creating.html#service-plan-properties">Supporting Service Plan Properties</a></span></li>
           <li><span class="topic"><a href="/on-demand-service-broker/creating.html#service-adapter-interface">Service adapter interface</a></span></li>
-          <li><span class="menu-subtitle-bold menu-js-subtitle"><a href="/on-demand-service-broker/creating.html#sub-commands">Subcommands</a></span>
+          <li><span class="menu-subtitle-bold"><a href="/on-demand-service-broker/creating.html#sub-commands">Subcommands</a></span>
             <ul>
               <li><span class="topic"><a href="/on-demand-service-broker/creating.html#generate-manifest">generate-manifest</a></span></li>
               <li><span class="topic"><a href="/on-demand-service-broker/creating.html#create-binding">create-binding</a></span></li>
@@ -63,7 +63,7 @@
             </ul>
           </li>
           <li><span class="topic"><a href="/on-demand-service-broker/operating.html#upload-required-releases">Upload Required Releases</a></span></li>
-          <li><span class="menu-subtitle-bold menu-js-subtitle"><a href="/on-demand-service-broker/operating.html#write-a-broker-manifest">Write a Broker Manifest</a></span>
+          <li><span class="menu-subtitle-bold"><a href="/on-demand-service-broker/operating.html#write-a-broker-manifest">Write a Broker Manifest</a></span>
             <ul>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#core-broker-configuration">Core Broker Configuration</a></span></li>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#service-catalog-and-plan-composition">Service catalog and Plan composition</a></span></li>
