--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -25,6 +25,7 @@
 @import "partials/footer";
 @import "partials/sidenav";
 @import "partials/fix-search-tables";
+@import "partials/search";
 
 // ~LAYOUT
 // ===================================================
