Added logs to the troubleshooting menu
Signed-off-by: Jatin Naik <jnaik@pivotal.io>

--- a/source/subnavs/pivotal_on_demand_broker_subnav.erb
+++ b/source/subnavs/pivotal_on_demand_broker_subnav.erb
@@ -80,6 +80,7 @@
           </li>
           <li><span class="menu-subtitle-bold"><a href="/on-demand-service-broker/operating.html#troubleshooting">Troubleshooting</a></span>
             <ul>
+                <li><span class="topic"><a href="/on-demand-service-broker/operating.html#logs">Logs</a></span></li>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#identifying-deployments">Identifying deployments in BOSH</a></span></li>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#identifying-tasks">Identifying BOSH tasks</a></span></li>
             </ul>
