split upgrading the broker into two sections

--- a/source/subnavs/pivotal_on_demand_broker_subnav.erb
+++ b/source/subnavs/pivotal_on_demand_broker_subnav.erb
@@ -74,7 +74,8 @@
             <ul>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#register-broker">register-broker</a></span></li>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#deregister-broker">deregister-broker</a></span></li>
-                <li><span class="topic"><a href="/on-demand-service-broker/operating.html#upgrading-the-broker-and-existing-service-instances">Upgrading the broker and existing service instances</a></span></li>
+                <li><span class="topic"><a href="/on-demand-service-broker/operating.html#upgrading-the-broker">Upgrading the broker</a></span></li>
+                <li><span class="topic"><a href="/on-demand-service-broker/operating.html#upgrading-existing-service-instances">Upgrading existing service instances</a></span></li>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#deleting-all-service-instances)">Deleting all service instances</a></span></li>
             </ul>
           </li>
