adding sections on updating/disabling/removing service plans

--- a/source/subnavs/pivotal_on_demand_broker_subnav.erb
+++ b/source/subnavs/pivotal_on_demand_broker_subnav.erb
@@ -77,6 +77,9 @@
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#upgrading-the-broker">Upgrading the broker</a></span></li>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#upgrading-existing-service-instances">Upgrading existing service instances</a></span></li>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#deleting-all-service-instances)">Deleting all service instances</a></span></li>
+                <li><span class="topic"><a href="/on-demand-service-broker/operating.html#updating-service-plans">Updating service plans</a></span></li>
+                <li><span class="topic"><a href="/on-demand-service-broker/operating.html#disabling-service-plans">Disabling service plans</a></span></li>
+                <li><span class="topic"><a href="/on-demand-service-broker/operating.html#removing-service-plans">Removing service plans</a></span></li>
             </ul>
           </li>
           <li><span class="menu-subtitle-bold"><a href="/on-demand-service-broker/operating.html#troubleshooting">Troubleshooting</a></span>
@@ -102,7 +105,6 @@
           <li><span class="topic"><a href="/on-demand-service-broker/concepts.html#unbind">Unbind</a></span></li>
           <li><span class="topic"><a href="/on-demand-service-broker/concepts.html#upgrade-all-instances">Upgrade all instances</a></span></li>
           <li><span class="topic"><a href="/on-demand-service-broker/concepts.html#delete-all-instances">Delete all instances</a></span></li>
-
         </ul>
       </li>
 
