Update some urls to not force http
[finish #118770711]

Signed-off-by: Gregg Van Hove <gvanhove@pivotal.io>

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -93,9 +93,9 @@
 
     <% if vars.use_global_header %>
       <header class="global-header header header-layout">
-        <a class="global-header pivotal-logo" href="http://docs.pivotal.io">
+        <a class="global-header pivotal-logo" href="/">
         </a>
-        <a href="http://docs.pivotal.io" class="global-header header-item global-header-title">
+        <a href="/" class="global-header header-item global-header-title">
           <%= vars.title %>
         </a>
         <div class="global-header header-links js-bar-links">
