--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -3,7 +3,7 @@
 ======================================================================== */
 
 .global-header.pivotal-logo {
-  background-image: url(http://docs.pivotal.io/images/icon-p-green.jpg);
+  background-image: url(/images/icon-p-green.jpg);
   background-repeat: no-repeat;
   background-position: center left;
   background-size: 100%;
