add new Monitoring topic to the Redis subnav[#119127749]

--- a/source/subnavs/pivotal_redis_service_subnav.erb
+++ b/source/subnavs/pivotal_redis_service_subnav.erb
@@ -50,6 +50,11 @@
         </ul>
       </li>
 
+      <li>
+        <span>
+          <a href="/redis/monitoring.html">Monitoring Redis for Pivotal Cloud Foundry&reg;</a>
+        </span>
+      </li>
 
       <li>
         <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
